# cli-tools

./: .gitignore  README.md  ask.md  ask.typ  cli-tools.sln  note.typ  py.py  rime-tools.sln  test.html
CsShared/: CsShared.csproj
NcXml/: GlobalUsing.cs  NcXml.csproj  Program.cs  cxml.nc.xml
NcXml/src/: Conf.cs  ParseFile.cs
NcXml/test/: MainWindow.axaml  MainWindow.axaml.nc.xml
RimeApi/: GlobalUsing.cs  Program.cs  Program.cs.txt  RimeApi.csproj
RimeApi/src/: DelegateRimeApiFn.cs  FnPtr.cs  Program.cs  RimeApi.cs  RimeApi.d.cs  RimeApiFn.d.cs  RimeApiFnNames.txt  RimeCandidate.cs  RimeCandidateListIterator.cs  RimeCommit.cs  RimeComposition.cs  RimeConfig.cs  RimeConfigIterator.cs  RimeContext.cs  RimeMenu.cs  RimeModule.cs  RimeNotificationHandler.cs  RimeSchemaList.cs  RimeSchemaListItem.cs  RimeStatus.cs  RimeStringSlice.cs  RimeTraits.cs  RimeUtil.cs  rime_api_console.cs  rime_console.cs
RimeLuaAot/: Program.cs  RimeLuaAot.csproj  aot.csproj  mk_win-x86.sh
RimeLuaAot.Test/: Program.cs  RimeLuaAot.Test.csproj
RimeLuaAot.Windows/: RimeLuaAot.Windows.csproj  mk_win-x86.sh
RimeLuaAot.Windows/src/: ClipBoard.cs
RimeTools/: Program.cs  RimeTools.csproj  main.csproj
RimeTools/Migrations/: 20241004080241_InitialCreate.Designer.cs  20241104143029__20241104214647_add_WordFreq.Designer.cs  20241104143029__20241104214647_add_WordFreq.cs
RimeTools/db/: db.sqlite-shm
RimeTools/src/: G.cs
Scripts/: DiffName.csx
WaterMark/: Program.cs  WaterMark.csproj
aot/: Program.cs  aot.csproj
aot/AotExe/: AotExe.csproj  Program.cs
aot/RimeLuaAot/: Program.cs  aot.csproj  build.sh
cc/: CMakeLists.txt  gcc.sh  msvc.sh
cc/src/: main.cc
lua/: TestLoadLib.lua
main/: Program.cs  db.sqlite  main.csproj
main/Migrations/: 20240926034213_InitialCreate.Designer.cs  (+10 more)
shared/: GlobalUsing.cs
test/: Main.csx  UnitTest1.cs  test.csproj
(+167 files in other folders)
